# mrrp

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  rocket.toml
backend/api/: Cargo.toml
backend/api/src/: auth_handler.rs  lib.rs  post_handler.rs
backend/application/: Cargo.toml
backend/application/src/: lib.rs
backend/application/src/humanity_check/: check.rs
backend/application/src/post/: create.rs  delete.rs  edit.rs  mod.rs  read.rs  upload.rs
backend/application/src/user/: create.rs  find.rs
backend/domain/: Cargo.toml
backend/domain/src/: models.rs  schema.rs
backend/domain/src/models/: mod.rs  photo.rs  post.rs  user.rs
backend/domain/src/utils/: date_format.rs  date_time_utc_form.rs  mod.rs
backend/infrastructure/: Cargo.toml  diesel.toml
backend/infrastructure/migrations/2025-01-17-011055_create_post/: up.sql
backend/infrastructure/migrations/2025-01-17-011207_create_photo/: up.sql
backend/infrastructure/migrations/2025-01-20-002413_create_posts/: up.sql
backend/infrastructure/migrations/2025-01-20-002417_create_photos/: down.sql  up.sql
backend/infrastructure/src/: lib.rs
backend/migrations/2025-01-17-011055_create_post/: down.sql
backend/migrations/2025-01-17-011207_create_photo/: down.sql  up.sql
backend/shared/: Cargo.toml
backend/shared/src/: response_models.rs
backend/src/: lib.rs  main.rs  models.rs  schema.rs
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/components/: post-form.tsx  post-lister.tsx  post.tsx
frontend/app/contexts/: usercontext.tsx
(+2 files in other folders)
