[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.136"
diesel = { version = "2.2.0", features = ["postgres"] }
sha2 = { version = "0.10.8" }
jwt = { version = "0.16.0" }
dotenvy = "0.15"
hmac = "0.12.1"
reqwest = "0.12.15"
