[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

diesel = { version = "2.2.0", features = ["postgres"] }
serde_json = "1.0.136"
rocket = "0.5.1"
chrono = { version = "0.4.39", features = ["serde"] }
