[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
serde = { version = "1.0.147", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
